fix: fix table background cell align

--- a/src/core/styles/index.module.scss
+++ b/src/core/styles/index.module.scss
@@ -22,6 +22,7 @@
 
         .timeHeaderScrollArea {
           overflow: hidden;
+          margin-left: -1px;
         }
       }
 
@@ -31,6 +32,7 @@
         padding-left: 17px;
         color: #222222;
         border: 1px solid #c5c5c5;
+        z-index: 1;
       }
     }
 
