--- a/src/core/styles/style.css
+++ b/src/core/styles/style.css
@@ -72,6 +72,7 @@
     right: 0;
     bottom: 0;
     z-index: 1;
+    margin-top: 1px;
 }
 
 table.resource-table, table.scheduler-bg-table, table.scheduler-table {
